edits from heckman cinco de mayo

--- a/Appendices/Genderdifferences.tex
+++ b/Appendices/Genderdifferences.tex
@@ -145,16 +145,18 @@ Note: This table reproduces the control-group means and estimated treatment effe
 
 \begin{table}[!htbp]
 \centering
+\begin{adjustbox}{width=\textwidth}
 \begin{threeparttable}
 \caption{Gender Differences of Treatment Effects, Risky Behavior}
 \begin{scriptsize}
 \input{output/abccare-gdiff-treatmenteffects100-risk}
 \end{scriptsize}
 \begin{tablenotes}
-\scriptsize
+\footnotesize
 Note: This table reproduces the control-group means and estimated treatment effects reported in (1) in Tables~\ref{table:tescombinedmales} and~\ref{table:tescombinedfemales}. The difference columns show the difference between the control mean and treatment effect of males and females. The $p$-value corresponding to each difference is from a sign rank test that compares the empirical distributions over 100 bootstrapped resamples. An asterisk indicates that the $p$-value remains significant after adjusting for multiple hypothesis testing blocking over the outcomes in this table.
 \end{tablenotes}
 \end{threeparttable}
+\end{adjustbox}
 \end{table}
 
 \begin{table}[!htbp]
@@ -188,7 +190,7 @@ Note: This table reproduces the control-group means and estimated treatment effe
 \subsection{Proportion of Outcomes Males $>$ Females}
 \label{appendix:propmales-females}
 
-Tables~\ref{tab:proportion-table-home} and~\ref{tab:proportion-table-alt} show the analogue of Table~\ref{tab:proportion-table} but comparing to subjects in the the control group that stays at home and attend alternative preschool, respectively. Table~\ref{fig:proportion-fhome} partitions the data by whether the father is present.
+Tables~\ref{tab:proportion-table-home} and~\ref{tab:proportion-table-alt} show the analogue of Table~\ref{tab:proportion-table} but comparing to subjects in the the control group that stays at home and attend alternative preschool, respectively. Figure~\ref{fig:proportion-fhome} partitions the data by whether the father is present.
 
 
 \begin{table}[H]
