--- a/abc_treatmenteffects.tex
+++ b/abc_treatmenteffects.tex
@@ -43,6 +43,7 @@ The University of Chicago}
 \restoregeometry
 \end{titlepage}
 
+\thispagestyle{empty}
 \singlespacing
 \begin{abstract}
 \input{sections/0_abstract}
@@ -78,6 +79,7 @@ Email: aziff@uchicago.edu                     &  \\
 \restoregeometry
 \doublespacing
 
+
 \setcounter{page}{0}
 \pagenumbering{arabic}
 
@@ -97,7 +99,7 @@ Email: aziff@uchicago.edu                     &  \\
 \label{sec:treatment-effects}
 \input{sections/4_treatment-effects}
 
-\section{Explanations for Gender Differences}
+\section{Explaining Gender Differences}
 \label{sec:gender-differences}
 \input{sections/5_gender-differences}
 
