--- a/sections/1_introduction.tex
+++ b/sections/1_introduction.tex
@@ -1,20 +1,22 @@
-Differences in gender are central features of economic and social life. This paper investigates how participation in enriched early childhood programs differently affects the lives of disadvantaged boys and girls, and whether it promotes or reduces gender gaps. We show that low-quality childcare programs harm boys and contribute to gender gaps. This analysis sounds a cautionary note for advocates of early childcare in any form. Quality matters and low-quality programs can cause harm.
+Differences in gender are central features of economic and social life. This paper investigates how participation in enriched early childhood programs affects the lives of disadvantaged boys and girls, and whether it promotes or reduces gender gaps. We show that on many outcomes low-quality childcare programs harm boys and contribute to gender gaps. This analysis sounds a cautionary note for advocates of early childcare in any form. Quality matters and low-quality programs can cause harm.
 
 There is a rich literature in psychology on the greater vulnerability of boys to adverse life conditions and the importance of fathers in the lives of boys.\footnote{See \citet{golding2016psychology}.} As a group, girls mature earlier, are more resilient to adversity, and perform better in a variety of life tasks.\footnote{See \citet{Schore_2017_IMHJ} for an informative overview of this literature. Economists have contributed to this literature. See, e.g., \citet{Bertrand_Pan_2013_AEJAE}, \citet{Autor-etal_2015_Family-Disadvantage} and \citet{Kottelenberg-Lehrer_2014_Gender-Effects}.} Less is known about effective strategies for reducing the vulnerability of boys to disadvantage.
 
-Many studies have shown the benefits of early-life interventions for improving the skills of children, especially those from disadvantaged families.\footnote{\citet{Currie_2011_AER,Elango_Hojman_etal_2016_Early-Edu}.} Although several of these studies report effects by gender, most do not.\footnote{We survey the literature in Appendix~\ref{appendix:gdiff-survey}. See \citet{Elango_Hojman_etal_2016_Early-Edu} for a discussion of the main findings from the literature on early childhood education. Not reporting gender differences is common. Some examples include \citet{Bernal_Keane_2011_JoLE,Cascio_Schanzenbach_2013_ImpactsExpandingAccess,Bitler_et_al_2014_Head_Start_Unpublished,Kline_Walters_2016_QJE}. There are some exceptions: \citet{Heckman_Moon_etal_2010_QE,Campbell_Conti_etal_2014_EarlyChildhoodInvestments,Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}.} Pooling males and females ignores potentially large differences in treatment effects. Even if treatment effects do not significantly differ by gender, early intervention can narrow the gaps present between males and females early in life depending on the outcomes used to measure gaps.
+Many studies have shown the benefits of early-life interventions for improving the skills of children, especially those from disadvantaged families.\footnote{\citet{Currie_2011_AER,Elango_Hojman_etal_2016_Early-Edu}.} Although several of these studies report effects by gender, most do not.\footnote{We survey the literature in Appendix~\ref{appendix:gdiff-survey}. See \citet{Elango_Hojman_etal_2016_Early-Edu} for a discussion of the main findings from the literature on early childhood education. Not reporting gender differences is common. Some examples include \citet{Bernal_Keane_2011_JoLE,Cascio_Schanzenbach_2013_ImpactsExpandingAccess,Bitler_et_al_2014_Head_Start_Unpublished,Kline_Walters_2016_QJE}. There are some exceptions: \citet{Heckman_Moon_etal_2010_QE,Campbell_Conti_etal_2014_EarlyChildhoodInvestments,Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}.} Pooling males and females ignores potentially large differences in treatment effects.
 
-This paper investigates this issue using data from a randomized controlled trial of a prototypical intensive early childhood program that enriched the early lives of disadvantaged children. Our data come from the Carolina Abecedarian Project (ABC) and its closely aligned sister program, the Carolina Approach to Responsive Education (CARE). These programs were conducted in Chapel Hill, North Carolina for a sample of children born between 1972 and 1980. We refer to the combined programs by the acronym ABC/CARE. The program is a template for many current and proposed early interventions.\footnote{Programs inspired by ABC/CARE have been (and are currently being) launched around the world. \citet{Sparling_2010_Highlights} and \citet{Ramey_Ramey_Lanzi_2014_Interventions} list numerous programs based on the ABC/CARE approach. The programs are: IHDP---eight different cities around the U.S. \citep{Spiker-etal_1997_Helping}; Early Head Start and Head Start in the U.S. \citep{Schneider_McDonald-eds_2007_Scale-Up_Vol-1}; John's Hopkins Cerebral Palsy Study in the U.S. \citep{Sparling_2010_Highlights}; Classroom Literacy Interventions and Outcomes (CLIO) study in the U.S. \citep{Sparling_2010_Highlights}; Massachusetts Family Child Care Study \citep{Collins_etal_2010_Massachusetts-Study}; Healthy Child Manitoba Evaluation \citep{Healthy_Child_Manitoba_2015_Starting-Early}; Abecedarian Approach within an Innovative Implementation Framework \citep{Jensen_Nielsen_2016_ABC-Programme-Pilot}; and Building a Bridge into Preschool in Remote Northern Territory Communities in Australia \citep{UMonash_Dataset_2015_URL}. Educare programs are also based on ABC/CARE \citep{Educare_2014_Research_Agenda,Yazejian_Bryant_2012_Educare}.} It starts at 8 weeks of age and continues through age 5. Treatment and control subjects are followed through their mid 30s, with data collected on multiple dimensions of human development.
+This paper investigates this issue using data from a randomized controlled trial of a prototypical intensive early childhood program that enriched the early lives of disadvantaged children. The data come from the Carolina Abecedarian Project (ABC) and its closely aligned sister program, the Carolina Approach to Responsive Education (CARE). These programs were conducted in Chapel Hill, North Carolina for a sample of children born between 1972 and 1980. In this paper, we refer to the combined programs by the acronym ABC/CARE. It is a template for many current and proposed early interventions.\footnote{Programs inspired by ABC/CARE have been (and are currently being) launched around the world. \citet{Sparling_2010_Highlights} and \citet{Ramey_Ramey_Lanzi_2014_Interventions} list numerous programs based on the ABC/CARE approach. The programs are: IHDP---eight different cities around the U.S. \citep{Spiker-etal_1997_Helping}; Early Head Start and Head Start in the U.S. \citep{Schneider_McDonald-eds_2007_Scale-Up_Vol-1}; John's Hopkins Cerebral Palsy Study in the U.S. \citep{Sparling_2010_Highlights}; Classroom Literacy Interventions and Outcomes (CLIO) study in the U.S. \citep{Sparling_2010_Highlights}; Massachusetts Family Child Care Study \citep{Collins_etal_2010_Massachusetts-Study}; Healthy Child Manitoba Evaluation \citep{Healthy_Child_Manitoba_2015_Starting-Early}; Abecedarian Approach within an Innovative Implementation Framework \citep{Jensen_Nielsen_2016_ABC-Programme-Pilot}; and Building a Bridge into Preschool in Remote Northern Territory Communities in Australia \citep{UMonash_Dataset_2015_URL}. Educare programs are also based on ABC/CARE \citep{Educare_2014_Research_Agenda,Yazejian_Bryant_2012_Educare}.} It starts at 8 weeks of age and continues through age 5. Treatment and control subjects are followed through their mid 30s, with data collected on multiple dimensions of human development.
 
-There are positive impacts of the program across the life cycle for both genders. However, there are substantial differences in impacts by gender across domains. The program differentially promotes the labor income, employment, and health of males and reduces their participation in crime. It differentially enhances the cognition, achievement, and educational attainment of girls. We investigate the sources of these differences. Boys placed in childcare benefit relatively more from high-quality center-based care compared to low-quality center-based care than do girls.
+There are positive impacts of the program across the life cycle for both genders. However, there are substantial differences in impacts by gender across domains. The program differentially promotes the labor income, employment, and health of males and reduces their participation in crime. It differentially enhances the cognition, achievement, and educational attainment of girls. Boys placed in childcare benefit relatively more than girls from participation in high-quality center-based care compared to low-quality center-based care.
 
-Our analysis sheds light on recent claims about the harm caused by enrolling children in childcare programs. In an influential analysis, \citet{Baker_Gruber_etal_2008_JPE} show that participants in childcare manifest adverse behavioral outcomes. \citet{Kottelenberg-Lehrer_2014_Gender-Effects} localize their effects to boys. However, all childcare programs are not alike. We produce evidence that high-quality childcare greatly benefits boys relative to low-quality childcare. Staying at home is a better option for them, especially if the family environment is relatively advantaged (e.g. the father is present). This effect is not found for girls. The program analyzed by \citet{Baker_Gruber_Milligan_2015_Noncog_Defects} and \citet{Kottelenberg-Lehrer_2014_Gender-Effects} is relatively low quality compared to the enriched program we analyze. There is no contradiction between the claim that low-quality programs impair child development, while high-quality programs do not. Boys are more vulnerable and respond adversely to low quality environments.
+Our analysis sheds light on recent claims about the harm caused by enrolling children in childcare programs. In an influential analysis, \citet{Baker_Gruber_etal_2008_JPE} show that participants in childcare manifest adverse behavioral outcomes. \citet{Kottelenberg-Lehrer_2014_Gender-Effects} localize their effects to boys.
 
-We report treatment effects comparing outcomes of the treated with those in different control conditions, including staying at home or attending lower-quality center-based care.\footnote{Historical documentation, records, and evidence from knowledgeable individuals indicate that although the available alternative centers followed state and federal standards, they were of considerably lower quality than the ABC/CARE program. We document this in Appendix~\ref{app:control-subbb}.}$^,$\footnote{Previous studies presenting treatment effects of ABC and CARE include \citet{Ramey_etal_1985_Project-CARE_TiECSE,Clarke_Campbell_1998_ABC_Comparison_ECRQ,Campbell_Pungello_etal_2001_DP,Campbell_Ramey_etal_2002_ADS,Campbell_Wasik_etal_2008_ECRQ,Campbell_Conti_etal_2014_EarlyChildhoodInvestments}.} Unlike previous studies, we also estimate treatment effects comparing the treatment group to different control groups: home care or care in low-quality centers. Home care is beneficial for boys compared to low quality childcare.
+However, all childcare programs are not alike. We produce evidence that high-quality childcare greatly benefits boys relative to low-quality childcare. Staying at home is a better option for them, especially if the family environment is relatively advantaged (e.g. the father is present). This effect is not found for girls. The program analyzed by \citet{Baker_Gruber_Milligan_2015_Noncog_Defects} and \citet{Kottelenberg-Lehrer_2014_Gender-Effects} is of relatively low quality compared to the enriched program we analyze.\footnote{The program they analyze was a modest payment (5-7 Canadian dollars a day) in the form of a voucher. The voucher component itself reduces received quality given information problems by parents.} There is no contradiction between the claim that low-quality programs impair child development, while high-quality programs do not. Boys are more vulnerable and respond adversely to low quality environments on many outcomes.
 
-To preview our analysis, we present gender differences in outcomes in Table~\ref{tab:proportion-table-ranksign}. We report the proportion of outcomes, by category, for which males outperform females (we have multiple outcome measures in each category which we explain in greater detail below). These proportions are invariant to the scales used for particular measures. Under the null hypothesis of no difference in treatment by gender, the proportion of outcomes favoring any particular gender should be 50\%. We test this hypothesis for the control group and the treatment group separately to determine whether there is a baseline (control) gender difference and whether treatment affects this gender difference.
+Unlike previous studies, we estimate treatment effects comparing treatment group outcomes to different control groups: home care or care in low-quality centers.\footnote{Historical documentation, records, and evidence from knowledgeable individuals indicate that although the available alternative centers followed state and federal standards, they were of considerably lower quality than the ABC/CARE program. We document this in Appendix~\ref{app:control-subbb}.}$^,$\footnote{Previous studies presenting treatment effects of ABC and CARE include \citet{Ramey_etal_1985_Project-CARE_TiECSE,Clarke_Campbell_1998_ABC_Comparison_ECRQ,Campbell_Pungello_etal_2001_DP,Campbell_Ramey_etal_2002_ADS,Campbell_Wasik_etal_2008_ECRQ,Campbell_Conti_etal_2014_EarlyChildhoodInvestments}.} We find that home care is beneficial for boys compared to low quality center childcare.
 
-Control males have higher IQs, employment, induced parental labor income (through subsidized childcare), and participation in criminal activity than females. They do better on an aggregate over all categories. Treatment reverses the gap between males and females for achievement. All achievement measures favor males in the control group, but favor females in the treatment group. Education is another outcome category for which treatment reverses the gender gap. Males have higher educational attainment in the control group with 66.7\% of the educational outcomes favoring males, although the result is not statistically significant. In the treatment group, however, only 11.1\% of the educational outcomes favor males. Treatment also reverses the gap for an aggregate across all outcome categories and narrows the gap for employment.
+To preview our analysis, we present gender differences in outcomes in Table~\ref{tab:proportion-table-ranksign}. We report the proportion of outcomes, by category, for which males outperform females (we have multiple outcome measures in each category which we explain in greater detail below). These proportions are invariant to the scales used for individual measures. Under the null hypothesis of no difference in treatment effects by gender, the proportion of outcomes favoring any gender should be 50\%. We test this hypothesis for the control group and the treatment group separately to determine whether there is a baseline (control) gender difference and whether treatment affects this gender difference.
+
+Control males have higher IQs, employment, enhanced parental labor income (through subsidized childcare), and participation in criminal activity than females. They do better on an aggregate over all categories. Treatment reverses the gap between males and females for achievement. All achievement measures favor males in the control group, but favor females in the treatment group. Education is another outcome category for which treatment reverses the gender gap. Males have higher educational attainment in the control group with 66.7\% of the educational outcomes favoring males, although the result is not statistically significant. In the treatment group, however, only 11.1\% of the educational outcomes favor males. Treatment reverses the gap for an aggregate across all outcome categories and narrows the gap for employment.
 
 \begin{table}[H]
 \centering
@@ -29,7 +31,7 @@ Control males have higher IQs, employment, induced parental labor income (throug
 \end{threeparttable}
 \end{table}
 
-Table~\ref{tab:proportion-table} summarizes the gender gaps reported in Table~\ref{tab:proportion-table-ranksign}, as well as those for different childcare environments for control-group children. In the control group, the proportion of outcomes for which males do better than females is higher than 50\% for most of the categories, although not all are statistically significant. Exceptions include social-emotional skills, risky behavior, and crime, in which females surpass males.\footnote{Females commit fewer crimes and report less risky behavior in comparison to males.} Treatment reverses the gaps for achievement, education, employment, parental income, and overall outcomes. For controls who stay at home, females have slightly better health outcomes than males. Finally, the males who attend lower-quality preschools do not outperform females on any of the outcome categories associated with cognition, education, and induced parental labor income (through subsidy of childcare). These outcomes are concentrated relatively early in the life of a child, indicating an early-life disadvantage that enriched early childcare programs partially correct.
+Table~\ref{tab:proportion-table} summarizes the gender gaps reported in Table~\ref{tab:proportion-table-ranksign}, as well as those for different childcare environments for control-group children. In the control group, the proportion of outcomes for which males do better than females is higher than 50\% for most of the categories, although not all are statistically significant. Exceptions include social-emotional skills, risky behavior, and crime, in which females surpass males.\footnote{Females commit fewer crimes and report less risky behavior in comparison to males.} Treatment reverses the gaps for achievement, education, employment, parental income, and overall outcomes. For controls who stay at home, females have slightly better health outcomes than males. The males who attend lower-quality preschools do not outperform females on any of the outcome categories associated with cognition, education, and induced parental labor income (through subsidy of childcare). These outcomes are concentrated relatively early in the life of a child, indicating an early-life disadvantage that enriched early childcare programs partially correct.
 
 \begin{table}[H]
 \centering
