--- a/sections/3_parameters.tex
+++ b/sections/3_parameters.tex
@@ -6,7 +6,7 @@ Individuals are eligible to participate in the program if baseline background va
 
 Let $\bm{Y}^1_a$ be the outcome vector at age $a$ for the treated. $\bm{Y}^0_a$ is the age-$a$ outcome vector for the controls. In principle, life-cycle outcomes for the treated and controls can depend on the exposures to various alternative preschools at each age. It would be desirable to estimate treatment effects for each possible exposure but our samples are too small to make credible estimates for very detailed levels of exposure.
 
-All treatment-group children have the same exposure. We simplify the analysis of the controls by creating two categories. ``$H$'' indicates that the control-group child is in home care throughout the entire length of the program. ``$C$'' indicates that the control-group child is in alternative center-based childcare for any amount of time.\footnote{This assumption is consistent with Figure~\ref{fig:proportion-alt-pre}. Once parents decide to enroll their children in alternative childcare arrangements, the children stay enrolled up to age 5.} We test the sensitivity of our estimates to the choice of different categorizations in our empirical analysis in Appendix~\ref{appendix:vsensitivity-controlsub}.
+All treatment-group children have the same exposure. We simplify the analysis of the controls by creating two categories. ``$H$'' indicates that the control-group child is in home care throughout the entire length of the program. ``$C$'' indicates that a control-group child is in alternative center-based childcare for any amount of time.\footnote{This assumption is consistent with Figure~\ref{fig:proportion-alt-pre}. Once parents decide to enroll their children in alternative childcare arrangements, the children stay enrolled up to age 5.} We test the sensitivity of our estimates to the choice of different categorizations in our empirical analysis in Appendix~\ref{appendix:vsensitivity-controlsub}.
 
 We thus compress a complex reality into two counterfactual outcome states at age $a$ for control-group subjects:
 \begin{align*}
@@ -34,11 +34,11 @@ It is also useful to assess the average effectiveness of a program relative to a
 \bm{\Delta}_a \left( V =1 \right) : =   \mathbb{E} \left[ \bm{Y}^1_a - \bm{Y}^0_a | V = 1, W = 1 \right] := \mathbb{E} \left[\bm{Y}^1_a - \bm{Y}^0_{a,C} | V = 1, \bm{B} \in \mathcal{B}_0 \right].
 \end{equation}
 
-Random assignment to treatment does not directly identify \eqref{eq:influenza} or \eqref{eq:smallpox}. Econometric methods are required to identify these parameters. We primarily rely on matching (conditions on observables) to control for selection into home or low-quality preschool by the control group. We report results from alternative strategies in Appendix~\ref{appendix:amethodology}. We characterize the determinants of choices and our strategy for controlling for selection into ``$H$'' and ``$C$'' below.
+Random assignment to treatment does not directly identify \eqref{eq:influenza} or \eqref{eq:smallpox}. Econometric methods are required to identify these parameters. We primarily rely on matching (conditions on observables) to control for selection into home or low-quality preschool by the control group. We report results from alternative strategies in Appendix~\ref{appendix:amethodology}. We characterize the determinants of choices and our strategy for controlling for selection into ``$H$'' and ``$C$'' when we discuss the empirical results in Section~\ref{sec:treatment-effects}.
 
 \subsection{Summarizing Multiple Treatment Effects}\label{sec:combining-functions}
 
-ABC/CARE has rich longitudinal data on multiple outcomes over multiple periods of the life cycle. Summarizing these effects in an interpretable way is challenging.\footnote{Appendix~\ref{appendix:results} presents step-down $p$-values for the blocks of outcomes that are used in \citet{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished} (\citealp{Lehman_Romano_2005_AnnStat} and \citealp{Romano_Shaikh_2006_AnnStat}). We follow the algorithm in \citet{Romano_Wolf_2016_pval_SaPL}.} Simpler, more digestible summary measures are useful for understanding our main findings. To construct these, we use combining functions that count the proportion of treatment effects that are positive by different categories of outcomes. In another paper (\citealp{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}), we monetize outcomes and estimate rates of return and cost/benefit rates. This requires making an additional layer of assumptions to extrapolate lifetime benefits, which we avoid making in this paper.
+ABC/CARE has rich longitudinal data on multiple outcomes over multiple periods of the life cycle. Summarizing these effects in an interpretable way is challenging.\footnote{Appendix~\ref{appendix:results} presents step-down $p$-values for the blocks of outcomes that are used in the cost/benefit analysis of \citet{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished} (\citealp{Lehman_Romano_2005_AnnStat} and \citealp{Romano_Shaikh_2006_AnnStat}). We follow the algorithm in \citet{Romano_Wolf_2016_pval_SaPL}.} Simpler, more digestible summary measures are useful for understanding our main findings. To construct these, we use combining functions that count the proportion of treatment effects that are positive by different categories of outcomes. In another paper (\citealp{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}), we monetize outcomes and estimate rates of return and cost/benefit rates. This requires making an additional layer of assumptions to extrapolate lifetime benefits, which we avoid making in this paper.
 
 Consider a block of $N_l$ outcomes indexed by set $Q_l = \{1,\dots,N_l\}$. Let $j \in Q_l$ be a particular outcome within block $l$. Associated with it is a mean treatment effect
 \begin{equation}
