--- a/sections/6_conclusion.tex
+++ b/sections/6_conclusion.tex
@@ -1,6 +1,6 @@
-This paper examines differences in gender impacts of treatment of early childhood programs targeted to disadvantaged children. We show that there are gender gaps favoring males before treatment that are altered by treatment. Control-group males tend to do better than the control-group females, especially in education and employment outcomes. After treatment, most gender gaps are narrowed or reversed. This corresponds with the finding that a larger proportion of the treatment effects are positive and significant for females than for males. ABC/CARE, in addition to improving select individual outcomes, also narrowed the male-female gap in important categories of outcomes.
+This paper examines gender differences in the impacts of treatment of an influential early childhood program targeted to disadvantaged children. Gender gaps favoring males before treatment are altered by treatment. Control-group males tend to do better than the control-group females, especially in education and employment outcomes. After treatment, most gender gaps are narrowed or even reversed. This corresponds with the finding that a larger proportion of the treatment effects are positive and statistically significant for females than for males. ABC/CARE, in addition to improving select individual outcomes, also narrowed the male-female gap in important outcome categories.
 
-Low-quality childcare arrangements are especially detrimental for boys. This finding helps explain an apparent contradiction in the literature (\citet{Baker_Gruber_etal_2008_JPE,Baker_Gruber_Milligan_2015_Noncog_Defects,Kottelenberg-Lehrer_2014_Gender-Effects}) that childcare can harm children. Low-quality childcare harms boys but the girls are robust to childcare arrangements. This evidence is consistent with previous research that finds boys to be more vulnerable early in life than girls \citep{golding2016psychology}. Similarly, boys are more harmed by unfavorable home environments (measured by father present and maternal locus of control) than girls.
+Low-quality childcare arrangements are detrimental for boys. This finding helps explain an apparent contradiction in the literature (\citet{Baker_Gruber_etal_2008_JPE,Baker_Gruber_Milligan_2015_Noncog_Defects,Kottelenberg-Lehrer_2014_Gender-Effects}) that childcare can harm children. Low-quality childcare harms boys but girls are robust to their childcare arrangements. This evidence is consistent with previous research that finds boys to be more vulnerable early in life than girls \citep{golding2016psychology}. Similarly, boys are more likely to be harmed by unfavorable home environments (measured by father present and maternal locus of control) than are girls.
 
 Our analysis sounds a cautionary note about the value of early childcare programs. In the past decade, many politicians and pundits have warmly embraced early childhood programs as solutions for reducing inequality and promoting social mobility. Little attention has been paid to the quality of those programs. This study shows that low-quality early childhood programs can have harmful effects on child development, especially for boys.
 
